--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
                 <div class="section-month">
                     <label for="month">Month</label>
-                    <input type="number" name="day" id="month" placeholder="MM">
+                    <input type="number" name="month" id="month" placeholder="MM">
 
                 </div>
                 <div class="section-year">
